add auth configuration

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,18 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>
+    <div 
+      style=
+      "padding: 10px;
+      top: 30em;
+      color: #555;
+      text-align: center;
+      font-family: Helvetica, Sans-Serif;
+      font-size: 24px;
+      font-weight: 400">
+      Loading...
+    </div>
+  </app-root>
 </body>
 </html>
