--- a/src/index.html
+++ b/src/index.html
@@ -1,26 +1,32 @@
 <!doctype html>
 <html lang="en">
+
 <head>
+  <style>
+    .app-root {
+          align-items: center;
+          box-sizing: border-box;
+          color: #666666;
+          display: flex;
+          flex-direction: column;
+          font-family: sans-serif;
+          font-size: 30px;
+          height: 100vh;
+          place-content: center;
+        }
+      </style>
   <meta charset="utf-8">
-  <title>Orgfoodshop</title>
+  <title>Organic Food</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
   <app-root>
-    <div 
-      style=
-      "padding: 10px;
-      top: 30em;
-      color: #555;
-      text-align: center;
-      font-family: Helvetica, Sans-Serif;
-      font-size: 24px;
-      font-weight: 400">
-      Loading...
-    </div>
+    <div class="app-root">Loading...</div>
   </app-root>
 </body>
+
 </html>
